welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:14: error: not found: value isFacingWest
  while (!isFacingWall() && !isOverBaggle() && isFacingWest()) {
                                               ^