welcome.lessons.welcome.summative.Moria.scala.code
back()
while (! isFacingWall) {
  if (isOverBaggle())
  	moveBaggle();
  
  forward();
  
  
}

def moveBaggle() {
  pickupBaggle();
  back();
  while (!isFacingWall() && !isOverBaggle() && isFacingWest()) {
    forward();
  }
  
  
  backward();
  dropBaggle();
  back()
}